<resources>
    <string name="app_name">AdminApp</string>

    <string name="adminlogin">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="register_driver">Register Driver</string>
    <string name="register_student">Register Student</string>
    <string name="track_bus">Track Bus</string>
    <string name="title_activity_maps">Map</string>
    <string name="driver_registration_form">Driver Registration Form</string>
    <string name="name">Name</string>
    <string name="busNumber">Bus Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_registration_form">Student Registration Form</string>
    <string name="roll_nu">Roll Number</string>
    <string name="department">Department</string>
    <string name="register_students">Register Students</string>
    <string name="remove_students">Remove Students</string>
    <string name="backToLogin">Back to Login</string>
    <string name="remover_drivers">Remove Drivers</string>
    <string name="register_drivers">Register Drivers</string>
    <string name="enter_email">Please Enter your registered Email Id</string>
    <string name="submit">Submit</string>
    <string name="driverLocation">Driver Location</string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>

</resources>
