<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    android:padding="16dp"
    tools:context=".DriverRegisterActivityA">

    <LinearLayout
        android:id="@+id/linear_layout_id4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/driver_registration_form"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_person_black"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="14sp"
            android:padding="7dp" />

        <EditText
            android:id="@+id/busNumber_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_directions_bus"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/busNumber"
            android:inputType="number"
            android:textSize="14sp"
            android:padding="7dp" />

        <EditText
            android:id="@+id/email_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_email_black"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_lock_black"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/confirm_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_lock_black"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/showPassLinearLayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/show_hide_pass_admin_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_password"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/register_driver_button_id"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/black"
        android:text="@string/register_driver"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />

</LinearLayout>